# gfmodules-nationale-verwijsindex-registratie-service

./: .dockerignore  .gitignore  Makefile  README.md  app.conf.autopilot  app.conf.example  docker-compose.yml  domains_map.json.example  publiccode.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml  docker-image-test.yaml  release-package-venv.yaml  release-package.yaml
app/: application.py  config.py  container.py  data.py  utils.py
app/exceptions/: fhir_exception.py  service_exceptions.py
app/models/: bsn.py  data_domain.py  domains_map.py  permission.py  pseudonym.py  referrals.py  token.py  update_scheme.py  ura_number.py
app/models/metadata/: fhir.py  params.py
app/params/: registration_request.py
app/routers/: cache.py  default.py  health.py  permission_check.py  registration.py  scheduler.py  synchronize.py  utils.py
app/services/: aes_encryption_service.py  authorization_check_service.py  cp_extractor.py  domain_map_service.py  metadata.py  nvi.py  oprf.py  pseudonym.py  pseudonym_service.py  referral_service.py  registration.py  registration_service.py  synchronizer.py  ura.py
app/services/OtvService/: factory.py  get_otv_ura.py  interface.py  mock.py  otv_stub_service.py
app/services/api/: api_service.py  fhir.py  http_service.py  metadata_api_service.py  nvi_api_service.py  oauth.py  pseudonym_api_service.py  utils.py
app/services/fhir/: bunde_entry_response.py  bundle.py  nvi_data_reference.py
app/services/oauth/: jwt_builder.py  jwt_builder_factory.py  oauth_service.py
app/services/parsers/: bundle.py  patient.py  reference.py
app/services/registration/: bundle.py  referrals.py
app/services/synchronization/: domain_map.py  scheduler.py  synchronizer.py
docker/: Dockerfile  httpd-ssl.conf  httpd.conf  init.sh
docs/doc_generator/: generate_docs.py  generator.py
docs/interface-definitions/: README.md  api-definitions.md  flows.md  pseudonymization-flows.md
docs/puml/: auth-check.puml  authorization-check-pseudonimization-flow.puml  manual-registration.puml  on-demand-sync.puml  periodical-sync.puml  referral-registration-pseudonymization-flow.puml
test_flow/: JWT.py  NVI.py  NVIList.py  OAuth.py  OPRF.py  PRS.py  data.py  demo_flow.py
test_flow/nvi_flows/: base.py  bundle_list_transaction.py  create_list.py  delete.py  delete_by_id.py  delete_list.py  get_by_id.py  get_list_by_id.py  localize.py  query_list.py  query_referrals.py  register.py
tests/: conftest.py  test_config.py  utils.py
tests/models/: test_bsn.py  test_ura_number.py
tests/query_params/: test_organization_affiliation_query_params.py  test_organization_query_params.py
tests/routers/: test_endpoint_routes.py  test_healthcareservice.py  test_location_routes.py  test_matching_care_api.py  test_organization_affiliation_routes.py  test_organization_routes.py  test_practitioner_role_routes.py  test_practitioner_routes.py
tests/services/: test_aes_encryption.py  test_authorization.py  test_domains_map_service.py  test_endpoint_service.py  test_jwt_builder.py  test_matching_care_service.py  test_metadata.py  test_nvi.py  test_oauth.py  test_oprf.py  test_organization_service.py  test_otv_stub_service.py  test_prs_registration_service.py  test_pseudonym.py  test_reference_validator.py  test_registration.py  test_scheduler.py  test_synchronizer.py  test_ura.py
tests/services/api_services/: test_api_service.py  test_fhir.py  test_metadata_api_service.py  test_nvi_api_service.py  test_oauth.py  test_pseudonym_api_service.py  test_synchronizer.py
tests/services/fhir/: test_bundle.py  test_bundle_entry_response.py  test_nvi_data_reference.py
tests/services/models/: test_permission.py
tests/services/parsers/: test_bundle.py  test_patient.py  (+1 more)
tests/various/: test_authentication.py  test_data.py
tools/: generate_dummy_certs.sh
(+5 files in other folders)
