[tool.poetry]
name = "gfmodules-nvi-referral-manager"
version = "0.1.0"
description = ""
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/gfmodules-nvi-referral-manager"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.35"
fastapi = "^0.116.1"
mypy = "^1.17.1"
pydantic-settings = "^2.10.1"
inject = "^5.3.0"
requests = "^2.32.5"
fhir-resources = "^8.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.4"
faker = "^37.6.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
httpx = "^0.28.1"
ruff = "0.12.11"
safety = "^3.6.0"
codespell = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = ["pyproject.toml", "app/*.py", "tests/*.py"]
line-length = 120

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = ["tests"]
