[tool.poetry]
name = "gfmodules-nationale-verwijsindex-registratie-service"
version = "0.1.0"
description = ""
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/gfmodules-nationale-verwijsindex-registratie-service"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.40"
fastapi = "^0.129"
mypy = "^1.19.1"
pydantic-settings = "^2.13.0"
inject = "^5.3.0"
requests = "^2.32.5"
fhir-resources = "8.1"
puzi = { git = "https://github.com/minvws/puzi-python" }
cryptography = "^46.0.5"
pyoprf = "^0.9.3"
pyjwt = "^2.11.0"
fhir-core = "=1.1.5"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.4"
faker = "^40.4.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"
ruff = "0.15.1"
codespell = "^2.4.1"
pip-audit = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = ["pyproject.toml", "app/*.py", "tests/*.py"]
line-length = 120

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = ["tests"]
